--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "doctrine/orm": "^2.5",
         "guzzlehttp/guzzle": "^6.3",
         "incenteev/composer-parameter-handler": "^2.0",
+        "predis/predis": "^1.1",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.1.0",
